# proto-chatbot-rag-panel

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  langgraph.json  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  agent.py
backend/app/agent/utils/: nodes.py  prompts.py  state.py  tools.py
backend/app/api/: chat.py  health.py
backend/app/data/: fake_clients.json
backend/app/data/fake_pages/: application_mobile.txt  assurance_vie.txt  carte_visa_classic.txt  carte_visa_infinite.txt  carte_visa_premier.txt  compte_titres_bourse.txt  contact_service_client.txt  credit_consommation.txt  credit_immobilier.txt  decouvert_autorise.txt  hello_bank.txt  ldds.txt  livret_a.txt  offre_esprit_libre.txt  opposition_carte.txt  pea.txt  pel_cel_epargne_logement.txt  presentation_groupe_bnp.txt  pret_etudiant.txt  rib_documents.txt  tarifs_frais_bancaires.txt  test.txt
backend/app/rag/: __init__.py  ingest.py  ingest_files.py  scraper.py  sites.py  vector_store.py
backend/tests/: test_smoke.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: ChatInput.vue  MessageBubble.vue  Sidebar.vue  WelcomeScreen.vue
frontend/src/services/: api.js
infra/: Makefile  init-pgvector.sql
infra/scripts/: bootstrap_pgvector.sh  build.sh  build_and_push.sh  pgvector.sh
infra/terraform/: .gitignore  containers.tf  database.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
