[project]
name = "bnp-chatbot-backend"
version = "0.1.0"
description = "BNP-like banking chatbot — FastAPI + LangGraph + Mistral + pgvector (POC backend)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # LangGraph + LangChain
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-mistralai>=0.2.0",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3.0",

    # Postgres driver (psycopg3, required by langchain-postgres)
    "psycopg[binary]>=3.2.0",

    # Scraping / ingestion
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
